Fixed animation bugs

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -74,7 +74,7 @@
 </div>
 
 <section class="our-products">
-  <div class="games-cat">
+  <div class="games-cat py-4">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Games</h1>
     <div class="container my-4">
       <div class="row">
@@ -102,55 +102,57 @@
       </div>
     </div>
 
-    <div class="expandable product-info-wrapper games-product-info mx-5 py-4 position-relative" data-open="false">
+    <div class="expandable product-info-wrapper games-product-info mx-5 position-relative" data-open="false">
       <div class="panel-controls">
         <button class="float-right close-btn btn-hidden" data-expand-close="true">
           &times;
         </button>
       </div>
 
-      <div id="game1" class="product-info">
-        <p>Game #1</p>
-      </div>
+      <div class="py-4">
+        <div id="game1" class="product-info">
+          <p>Game #1</p>
+        </div>
 
-      <div id="zombie-game-info" class="product-info">
-        <div class="container">
-          <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Zombie Runner</h3>
-          <div class="row">
-            <div class="col-lg">
-              <div class="video-thumbnail position-relative text-center">
-                <img src="https://i.ytimg.com/vi/DS15qFLy9RQ/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBg2fRu6TaKWQG4xInunExZbR1i8Q" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
-                <button class="video-popup-btn" data-video-id="DS15qFLy9RQ">
-                  <i class="fas fa-play"></i>
-                </button>
+        <div id="zombie-game-info" class="product-info">
+          <div class="container">
+            <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Zombie Runner</h3>
+            <div class="row">
+              <div class="col-lg">
+                <div class="video-thumbnail position-relative text-center">
+                  <img src="https://i.ytimg.com/vi/DS15qFLy9RQ/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBg2fRu6TaKWQG4xInunExZbR1i8Q" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
+                  <button class="video-popup-btn" data-video-id="DS15qFLy9RQ">
+                    <i class="fas fa-play"></i>
+                  </button>
+                </div>
               </div>
-            </div>
-            <div class="col-lg-8">
-              <div class="product-description mt-4 mt-lg-0">
-                <p>
-                  Zombie Runner is an action-packed zombie game! Keep running away from the zombies before they catch you! plz get game thx.
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales metus mattis, pulvinar dolor id, tincidunt odio. 
-                  Donec maximus egestas mauris eget fringilla. In volutpat nunc vitae auctor hendrerit. Maecenas aliquet nunc quis laoreet commodo. 
-                  Integer sollicitudin enim vitae lectus suscipit, gravida condimentum elit euismod. Curabitur porttitor nisl sed tincidunt mattis. 
-                  Etiam id orci consequat, sodales sem aliquam, facilisis mauris. Quisque ac pellentesque diam. 
-                  Pellentesque ante neque, gravida at sem vitae, sagittis vulputate metus. Aenean aliquam nunc molestie elit dictum venenatis.
-                </p>
+              <div class="col-lg-8">
+                <div class="product-description mt-4 mt-lg-0">
+                  <p>
+                    Zombie Runner is an action-packed zombie game! Keep running away from the zombies before they catch you! plz get game thx.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales metus mattis, pulvinar dolor id, tincidunt odio. 
+                    Donec maximus egestas mauris eget fringilla. In volutpat nunc vitae auctor hendrerit. Maecenas aliquet nunc quis laoreet commodo. 
+                    Integer sollicitudin enim vitae lectus suscipit, gravida condimentum elit euismod. Curabitur porttitor nisl sed tincidunt mattis. 
+                    Etiam id orci consequat, sodales sem aliquam, facilisis mauris. Quisque ac pellentesque diam. 
+                    Pellentesque ante neque, gravida at sem vitae, sagittis vulputate metus. Aenean aliquam nunc molestie elit dictum venenatis.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
+
         </div>
 
-      </div>
-
-      <div id="game3" class="product-info">
-        <p>Game 3</p>
+        <div id="game3" class="product-info">
+          <p>Game 3</p>
+        </div>
       </div>
     </div>
   </div>
 
-  <hr class="sep" />
+  <hr class="sep my-0 mb-3" />
 
-  <div class="applications-cat mt-5">
+  <div class="applications-cat py-4">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Applications</h1>
     <div class="container my-4">
       <div class="row">
@@ -185,23 +187,25 @@
         </button>
       </div>
 
-      <div id="app1" class="product-info">
-        <p>App #1</p>
-      </div>
+      <div class="py-4">
+        <div id="app1" class="product-info">
+          <p>App #1</p>
+        </div>
 
-      <div id="app2" class="product-info">
-        <p>App #2</p>
-      </div>
+        <div id="app2" class="product-info">
+          <p>App #2</p>
+        </div>
 
-      <div id="app3" class="product-info">
-        <p>App #3</p>
+        <div id="app3" class="product-info">
+          <p>App #3</p>
+        </div>
       </div>
     </div>
   </div>
 
-  <hr class="sep" />
+  <hr class="sep my-0 mb-3" />
 
-  <div class="software-cat mt-5">
+  <div class="software-cat py-4">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Software</h1>
     <div class="container my-4">
       <div class="row">
@@ -223,71 +227,73 @@
       </div>
     </div>
 
-    <div class="expandable product-info-wrapper games-product-info mx-5 py-4 position-relative" data-open="false">
+    <div class="expandable product-info-wrapper games-product-info mx-5 position-relative" data-open="false">
       <div class="panel-controls">
         <button class="float-right close-btn btn-hidden" data-expand-close="true">
           &times;
         </button>
       </div>
       
-      <div id="software1" class="product-info">
-        <div class="container">
-          <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Framer</h3>
-          <div class="row">
-            <div class="col-lg">
-              <div class="video-thumbnail position-relative text-center">
-                <img src="https://i.ytimg.com/vi/4FXRmkdt3_8/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBWkAYkZy76TjceBP-HAjZKz1AFsA" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
-                <button class="video-popup-btn" data-video-id="4FXRmkdt3_8">
-                  <i class="fas fa-play"></i>
-                </button>
+      <div class="py-4">
+        <div id="software1" class="product-info">
+          <div class="container">
+            <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Framer</h3>
+            <div class="row">
+              <div class="col-lg">
+                <div class="video-thumbnail position-relative text-center">
+                  <img src="https://i.ytimg.com/vi/4FXRmkdt3_8/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBWkAYkZy76TjceBP-HAjZKz1AFsA" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
+                  <button class="video-popup-btn" data-video-id="4FXRmkdt3_8">
+                    <i class="fas fa-play"></i>
+                  </button>
+                </div>
               </div>
-            </div>
-            <div class="col-lg-8">
-              <div class="product-description mt-4 mt-lg-0">
-                <p>
-                  Ready to design your first animation? Magic Motion is a visual way to create immersive prototypes. Just use the connector to draw a link between elements on the canvas. Manipulate size or position and Framer figures out everything else.
-                  Draw simple card animations or compose complex prototypes. The best part? Nothing you design is throwaway—Framer outputs animation values that can be used 1:1 in production.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div id="software2" class="product-info">
-        <div class="container">
-          <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Firebase</h3>
-          <div class="row">
-            <div class="col-lg">
-              <div class="video-thumbnail position-relative text-center">
-                <img src="https://i.ytimg.com/vi/9kRgVxULbag/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLCobYSKTKWX9O1VSLIZJ945B75tUQ" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
-                <button class="video-popup-btn" data-video-id="9kRgVxULbag">
-                  <i class="fas fa-play"></i>
-                </button>
-              </div>
-            </div>
-            <div class="col-lg-8">
-              <div class="product-description mt-4 mt-lg-0">
-                <p>
-                 Firebase is a platform for creating mobile and web applications developed by Google. It was originally an independent company founded in 2011. In 2014, Google acquired the platform and it is now their flagship offering for app development
-                </p>
+              <div class="col-lg-8">
+                <div class="product-description mt-4 mt-lg-0">
+                  <p>
+                    Ready to design your first animation? Magic Motion is a visual way to create immersive prototypes. Just use the connector to draw a link between elements on the canvas. Manipulate size or position and Framer figures out everything else.
+                    Draw simple card animations or compose complex prototypes. The best part? Nothing you design is throwaway—Framer outputs animation values that can be used 1:1 in production.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-      </div>
+        <div id="software2" class="product-info">
+          <div class="container">
+            <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Firebase</h3>
+            <div class="row">
+              <div class="col-lg">
+                <div class="video-thumbnail position-relative text-center">
+                  <img src="https://i.ytimg.com/vi/9kRgVxULbag/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLCobYSKTKWX9O1VSLIZJ945B75tUQ" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
+                  <button class="video-popup-btn" data-video-id="9kRgVxULbag">
+                    <i class="fas fa-play"></i>
+                  </button>
+                </div>
+              </div>
+              <div class="col-lg-8">
+                <div class="product-description mt-4 mt-lg-0">
+                  <p>
+                  Firebase is a platform for creating mobile and web applications developed by Google. It was originally an independent company founded in 2011. In 2014, Google acquired the platform and it is now their flagship offering for app development
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
 
-      <div id="software3" class="product-info">
-        <p>Game 3</p>
+        </div>
+
+        <div id="software3" class="product-info">
+          <p>Game 3</p>
+        </div>
       </div>
     </div>
 
   </div>
 
-  <hr class="sep" />
+  <hr class="sep my-0 mb-3" />
 
-  <div class="extensions-cat mt-5">
+  <div class="extensions-cat py-4">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Extensions</h1>
     <div class="container my-4">
       <div class="row">
@@ -322,16 +328,18 @@
         </button>
       </div>
 
-      <div id="ext1" class="product-info">
-        <p>ext #1</p>
-      </div>
+      <div class="py-4">
+        <div id="ext1" class="product-info">
+          <p>ext #1</p>
+        </div>
 
-      <div id="ext2" class="product-info">
-        <p>ext #2</p>
-      </div>
+        <div id="ext2" class="product-info">
+          <p>ext #2</p>
+        </div>
 
-      <div id="ext3" class="product-info">
-        <p>ext #3</p>
+        <div id="ext3" class="product-info">
+          <p>ext #3</p>
+        </div>
       </div>
     </div>
   </div>
