--- a/public/css/products.css
+++ b/public/css/products.css
@@ -46,23 +46,53 @@
 
 /*--- Our Products ---*/
 .product-img {
+  display: block;
   transition: transform 0.3s;
+  transform: scale(1.1);
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
+.product-img-wrapper {
+  position: relative;
+  transition: transform 0.3s, border-radius 0.3s;
+  overflow: hidden;
+}
+
+/*
+Image gradient on hover
+.product-img-wrapper:after {
+  content:'';
+  opacity: 0;
+  transition: opacity 0.3s linear;
+}
+
+.product-img-wrapper:hover:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(to bottom, rgba(0, 47, 75, 0.7), rgba(0, 47, 75));
+  opacity: 0.6;
+  transition: opacity 0.3s;
+}*/
+
 .product-img-wrapper:hover .product-img {
-  transform: scale(1.05);
+  transform: scale(1);
 } 
 
-.product-img-wrapper {
-  overflow: hidden;
+.product-img-wrapper:hover {
+  transform: scale(1.025);
+  border-radius: 5px;
 }
 
 .product-info-wrapper {
   display: none;
   overflow: hidden;
-  transition: max-height 1s ease-in-out;
   background-color: #ececec;
-  padding: 1%;
 }
 
 .product-info {
