centered images for mobile

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -77,7 +77,7 @@
   <div class="games-cat py-4">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Games</h1>
     <div class="container my-4">
-      <div class="row">
+      <div class="row text-center">
         <div class="col-md-4">
           <button class="d-none btn-hidden" data-expand="#game1">
             <div class="product-img-wrapper shadow">
@@ -155,7 +155,7 @@
   <div class="applications-cat py-4">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Applications</h1>
     <div class="container my-4">
-      <div class="row">
+      <div class="row text-center">
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#app1">
             <div class="product-img-wrapper shadow">
@@ -208,7 +208,7 @@
   <div class="software-cat py-4">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Software</h1>
     <div class="container my-4">
-      <div class="row">
+      <div class="row text-center">
         <div class="offset-md-2"></div>
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#software1">
@@ -296,7 +296,7 @@
   <div class="extensions-cat py-4">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Extensions</h1>
     <div class="container my-4">
-      <div class="row">
+      <div class="row text-center">
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#ext1">
             <div class="product-img-wrapper shadow">
