Made expandables mobile friendly

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -78,24 +78,11 @@
     <h1 class="display-5 text-center font-weight-light text-capitalize">Games</h1>
     <div class="container my-4">
       <div class="row text-center">
-        <div class="col-md-4">
-          <button class="d-none btn-hidden" data-expand="#game1">
-            <div class="product-img-wrapper shadow">
-              <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="Game1"/>
-            </div>
-          </button>
-        </div>
+        <div class="offset-md-4"></div>
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#zombie-game-info">
             <div class="product-img-wrapper shadow">
               <img src="/images/products/zombie-runner.png" class="product-img img-fluid" alt="Zombie Runner cover image"/>
-            </div>
-          </button>
-        </div>
-        <div class="col-md-4">
-          <button class="d-none btn-hidden" data-expand="#game3">
-            <div class="product-img-wrapper shadow">
-              <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="Game3"/>
             </div>
           </button>
         </div>
@@ -110,10 +97,6 @@
       </div>
 
       <div class="py-4">
-        <div id="game1" class="product-info">
-          <p>Game #1</p>
-        </div>
-
         <div id="zombie-game-info" class="product-info">
           <div class="container">
             <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Zombie Runner</h3>
@@ -141,10 +124,6 @@
             </div>
           </div>
 
-        </div>
-
-        <div id="game3" class="product-info">
-          <p>Game 3</p>
         </div>
       </div>
     </div>
