Improved scroll to top positioning on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -95,6 +95,12 @@ section {
   transition: transform 0.3s;
 }
 
+@media (max-width: 768px) {
+  .scroll-top {
+    bottom: 0;
+  }
+}
+
 /*--- Footer ---*/
 footer.footer {
   display: flex;
