--- a/views/products.hbs
+++ b/views/products.hbs
@@ -31,7 +31,7 @@
 </section>
 
 <!-- Category buttons -->
-<div class="category-buttons">
+<div class="category-buttons d-none d-md-block">
   <div class="container-fluid">
     <div class="category-row row justify-content-center">
       <div class="cat-btn-container col-md text-center">
@@ -89,7 +89,7 @@
       </div>
     </div>
 
-    <div class="expandable product-info-wrapper games-product-info mx-5 position-relative" data-open="false">
+    <div class="expandable product-info-wrapper games-product-info mx-md-5 position-relative" data-open="false">
       <div class="panel-controls">
         <button class="float-right close-btn btn-hidden" data-expand-close="true">
           &times;
@@ -116,8 +116,6 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales metus mattis, pulvinar dolor id, tincidunt odio. 
                     Donec maximus egestas mauris eget fringilla. In volutpat nunc vitae auctor hendrerit. Maecenas aliquet nunc quis laoreet commodo. 
                     Integer sollicitudin enim vitae lectus suscipit, gravida condimentum elit euismod. Curabitur porttitor nisl sed tincidunt mattis. 
-                    Etiam id orci consequat, sodales sem aliquam, facilisis mauris. Quisque ac pellentesque diam. 
-                    Pellentesque ante neque, gravida at sem vitae, sagittis vulputate metus. Aenean aliquam nunc molestie elit dictum venenatis.
                   </p>
                 </div>
               </div>
@@ -159,7 +157,7 @@
       </div>
     </div>
 
-    <div class="expandable product-info-wrapper position-relative games-product-info mx-5" data-open="false">
+    <div class="expandable product-info-wrapper position-relative app-product-info mx-md-5" data-open="false">
       <div class="panel-controls">
         <button class="float-right close-btn btn-hidden" data-expand-close="true">
           &times;
@@ -206,7 +204,7 @@
       </div>
     </div>
 
-    <div class="expandable product-info-wrapper games-product-info mx-5 position-relative" data-open="false">
+    <div class="expandable product-info-wrapper games-product-info mx-md-5 position-relative" data-open="false">
       <div class="panel-controls">
         <button class="float-right close-btn btn-hidden" data-expand-close="true">
           &times;
@@ -300,7 +298,7 @@
       </div>
     </div>
 
-    <div class="expandable product-info-wrapper position-relative games-product-info mx-5" data-open="false">
+    <div class="expandable product-info-wrapper position-relative extension-product-info mx-md-5" data-open="false">
       <div class="panel-controls">
         <button class="float-right close-btn btn-hidden" data-expand-close="true">
           &times;
