Made "Back to Top" text a tooltip

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -37,12 +37,9 @@
 </head>
 <body>
   <div class="scroll-top" id="scroll-top">
-    <button class="scroll-top-btn" data-scroll="true" data-to="body">
+    <button class="scroll-top-btn" data-scroll="true" data-to="body" data-toggle="tooltip" data-placement="top" title="Back to Top">
       <div class="circle-icon">
         <i class="icon fas fa-chevron-up fa-fw"></i>
-      </div>
-      <div class="to-top-text">
-        <p class="mt-2">Back to Top</p>
       </div>
     </button>
   </div>
