--- a/views/products.hbs
+++ b/views/products.hbs
@@ -75,6 +75,9 @@
 
 <section class="our-products">
   <div class="games-cat py-4">
+    <div class="d-md-none d-table icon-sep">
+      <i class="icon fas fa-gamepad fa-fw"></i>
+    </div>
     <h1 class="display-5 text-center font-weight-light text-capitalize">Games</h1>
     <div class="container my-4">
       <div class="row text-center">
@@ -130,6 +133,9 @@
   <hr class="sep my-0 mb-3" />
 
   <div class="applications-cat py-4">
+    <div class="d-md-none d-table icon-sep">
+      <i class="icon fas fa-file-code fa-fw"></i>
+    </div>
     <h1 class="display-5 text-center font-weight-light text-capitalize">Applications</h1>
     <div class="container my-4">
       <div class="row text-center">
@@ -183,6 +189,9 @@
   <hr class="sep my-0 mb-3" />
 
   <div class="software-cat py-4">
+    <div class="d-md-none d-table icon-sep">
+      <i class="icon fas fa-laptop fa-fw"></i>
+    </div>
     <h1 class="display-5 text-center font-weight-light text-capitalize">Software</h1>
     <div class="container my-4">
       <div class="row text-center">
@@ -271,6 +280,9 @@
   <hr class="sep my-0 mb-3" />
 
   <div class="extensions-cat py-4">
+    <div class="d-md-none d-table icon-sep">
+      <i class="icon fas fa-cog fa-fw"></i>
+    </div>
     <h1 class="display-5 text-center font-weight-light text-capitalize">Extensions</h1>
     <div class="container my-4">
       <div class="row text-center">
