--- a/views/index.hbs
+++ b/views/index.hbs
@@ -227,7 +227,7 @@
             <div class="card-button-container d-flex justify-content-between">
               <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
               <div class="d-flex store-buttons align-items-center">
-                <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
+                <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></a>
                 <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
               </div>
             </div>
