--- a/views/products.hbs
+++ b/views/products.hbs
@@ -84,8 +84,12 @@
         <div class="offset-md-4"></div>
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#zombie-game-info">
-            <div class="product-img-wrapper shadow">
+            <div class="product-img-wrapper position-relative shadow">
               <img src="/images/products/zombie-runner.png" class="product-img img-fluid" alt="Zombie Runner cover image"/>
+            </div>
+            <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
+              <a class="mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></a>
+              <a href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
             </div>
           </button>
         </div>
@@ -119,6 +123,10 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales metus mattis, pulvinar dolor id, tincidunt odio. 
                     Donec maximus egestas mauris eget fringilla. In volutpat nunc vitae auctor hendrerit. Maecenas aliquet nunc quis laoreet commodo. 
                     Integer sollicitudin enim vitae lectus suscipit, gravida condimentum elit euismod. Curabitur porttitor nisl sed tincidunt mattis. 
+                    <div class="store-buttons-container text-lg-left text-center">
+                      <a class="read-more-btn btn btn-md moon-btn btn-outline-dark"><i class="apple-store store-icon fab fa-apple fa-fw"></i>Download on the App Store</a>
+                      <a class="read-more-btn btn btn-md moon-btn btn-outline-dark ml-md-3 mt-3 mt-md-0"><i class="android-store store-icon fab fa-google-play fa-fw"></i>Download it on Google Play</a>
+                    </div>
                   </p>
                 </div>
               </div>
@@ -239,6 +247,10 @@
                     Ready to design your first animation? Magic Motion is a visual way to create immersive prototypes. Just use the connector to draw a link between elements on the canvas. Manipulate size or position and Framer figures out everything else.
                     Draw simple card animations or compose complex prototypes. The best part? Nothing you design is throwaway—Framer outputs animation values that can be used 1:1 in production.
                   </p>
+                  <div class="store-buttons-container text-lg-left text-center">
+                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark"><i class="apple-store store-icon fab fa-apple fa-fw"></i>Download on the App Store</a>
+                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0"><i class="android-store store-icon fab fa-google-play fa-fw"></i>Download it on Google Play</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -260,8 +272,12 @@
               <div class="col-lg-8">
                 <div class="product-description mt-4 mt-lg-0">
                   <p>
-                  Firebase is a platform for creating mobile and web applications developed by Google. It was originally an independent company founded in 2011. In 2014, Google acquired the platform and it is now their flagship offering for app development
+                    Firebase is a platform for creating mobile and web applications developed by Google. It was originally an independent company founded in 2011. In 2014, Google acquired the platform and it is now their flagship offering for app development
                   </p>
+                </div>
+                <div class="store-buttons-container text-center text-lg-left">
+                  <a href="#" title="Go to app store" target="_blank"><img src="images/app-store.png" class="store-img img-fluid" alt="Download on the App Store" /></a>
+                  <a href="#" title="Go to play store" target="_blank"><img src="images/play-store.png" class="store-img img-fluid" alt="Download it on the play store" /></a>
                 </div>
               </div>
             </div>
