--- a/views/products.hbs
+++ b/views/products.hbs
@@ -88,8 +88,8 @@
               <img src="/images/products/zombie-runner.png" class="product-img img-fluid" alt="Zombie Runner cover image"/>
             </div>
             <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
-              <a class="mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></a>
-              <a href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
+              <a class="mr-2" href="#" target="_blank" title="Go to App Store"><i class="apple-store store-icon fab fa-apple fa-fw"></i></a>
+              <a href="#" target="_blank" title="Go to Play Store"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
             </div>
           </button>
         </div>
